# ShipPathCalculations

./: CMakeLists.txt  StdAfx.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  qml.qrc
Calculations/: MovementCalculator.cpp  MovementCalculator.h
CalculationsTest/: CalculationsTest.cpp  CalculationsTest.h
CryEngine/: CommonMacros.cmake  CryCommonConfig.cmake
CryEngine/CryCommon/CryAssert/: CryAssert_Windows.h
CryEngine/CryCommon/CryCore/Compiler/: MSVCspecific.h
CryEngine/CryCommon/CryCore/Platform/: platform.h
CryEngine/CryCommon/CryCore/Project/: CryModuleDefs.h
CryEngine/CryCommon/CryMemory/: CryMemoryManager.h
CryEngine/CryCommon/CrySerialization/Decorators/: Resources.h
CryEngine/CryCommon/CrySerialization/yasli/: JSONIArchiveImpl.h  MemoryWriterImpl.h
CryEngine/CryCommon/CrySystem/File/: ICryPak.h
CryEngine/CryCommon/CrySystem/Scaleform/: ConfigScaleform.h
CryEngine/CryCommon/CrySystem/Testing/: CryTest.h
CryEngine/CryCommon/CryThreading/: CryAtomics_impl_win32.h
common/: CryCommon.h
